--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "PCology",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@devexpress/dx-react-core": "^1.10.1",
@@ -9,7 +9,7 @@
     "@material-ui/core": "^3.9.2",
     "cuid": "^2.1.1",
     "date-fns": "^1.29.0",
-    "firebase": "4.12.1",
+    "firebase": "^4.12.1",
     "firebase-tools": "6.3.1",
     "fullcalendar": "^4.0.0-alpha.4",
     "google-map-react": "^0.34.0",
